# ThesisExamples

./: ThesisExamples.cabal
app/: Main.hs
js/: Monad.js  StateMonadProfessor.js  applicative.js  commonJSUtilities.js  functor.js  testPage.html
src/: Fibonacci.hs  HigherOrderFunction.hs  HigherOrderFunctionCurryingClosure.hs  IOMonad.hs  IORef.hs  LazyEvaluation.hs  ListMonad.hs  MaybeMonad.hs  PureFunctionComposition.hs  ReaderMonad.hs  StateMonad.hs  StateTMonad.hs  Types.hs
