name:                ThesisExamples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         This project contains the examples of functional concepts corelated to my thesis
homepage:            https://github.com/githubuser/ThesisExamples#readme
license:             BSD3
license-file:        LICENSE
author:              Enrico Benini
maintainer:          benkio89@gmail.com
copyright:           2017 Enrico Benini
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HigherOrderFunctionCurryingClosure,
                       PureFunctionComposition,
                       Fibonacci,
                       LazyEvaluation,
                       Types,
                       IOMonad,
                       MaybeMonad,
                       ListMonad,
                       StateMonad
  build-depends:       base >= 4.7 && < 5,
                       random,
                       transformers
  default-language:    Haskell2010

executable ThesisExamples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ThesisExamples
  default-language:    Haskell2010

test-suite ThesisExamples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ThesisExamples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ThesisExamples
